<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.impostogratificacao.MainActivity"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitecodigoo" />
    
    <EditText
        android:id="@+id/codigoo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="number" >

        <requestFocus />
    </EditText>

 	 <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitesalbase" />
    
    <EditText
        android:id="@+id/salbase"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="number" >

    </EditText>   
    
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digitetempo" />
    
    <EditText
        android:id="@+id/tempo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="number" >

    </EditText>   
    
    <Button
        android:id="@+id/btnCalcular"
          android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular" 
          android:onClick="calcular"/>
    
     <Button
        android:id="@+id/btnVoltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calcular"
        android:text="@string/voltar" />
</LinearLayout>
